--- a/Exchange/Exchange/Base.lproj/Main.storyboard
+++ b/Exchange/Exchange/Base.lproj/Main.storyboard
@@ -773,37 +773,83 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EOh-cV-3zM">
-                                <rect key="frame" x="600" y="34" width="49" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="Hu0-79-6I5"/>
-                                    <constraint firstAttribute="width" constant="49" id="gcg-Qd-IP5"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
-                                <state key="normal" title="Cancel">
-                                    <color key="titleColor" red="0.97647058823529409" green="0.94901960784313721" blue="0.90588235294117647" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="DNa-wN-Y7b">
+                                <rect key="frame" x="600" y="64" width="540" height="487"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="sectionIndexBackgroundColor" red="0.97647058823529409" green="0.94901960784313721" blue="0.90588235294117647" alpha="1" colorSpace="calibratedRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FilteredConnectionsCell" rowHeight="120" id="KSv-fR-be2" customClass="FilteredConnectionsCell" customModule="Exchange" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="540" height="120"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KSv-fR-be2" id="D13-tL-1ul">
+                                            <rect key="frame" x="0.0" y="0.0" width="540" height="119"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XDT-ec-PTD">
+                                                    <rect key="frame" x="96" y="47" width="436" height="26"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="19"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HRP-eM-RFY">
+                                                    <rect key="frame" x="96" y="81" width="436" height="20"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="14"/>
+                                                    <color key="textColor" red="0.0" green="0.6588235294117647" blue="0.77647058823529413" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0nx-g0-cfe">
+                                                    <rect key="frame" x="8" y="20" width="80" height="80"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="78f-Wf-Q8I"/>
+                                                        <constraint firstAttribute="width" constant="80" id="LSb-Xa-UPR"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="HRP-eM-RFY" firstAttribute="top" secondItem="XDT-ec-PTD" secondAttribute="bottom" constant="8" id="3cK-io-0MR"/>
+                                                <constraint firstItem="0nx-g0-cfe" firstAttribute="centerY" secondItem="D13-tL-1ul" secondAttribute="centerY" id="9Mm-Wz-2QK"/>
+                                                <constraint firstItem="0nx-g0-cfe" firstAttribute="leading" secondItem="D13-tL-1ul" secondAttribute="leadingMargin" id="Cio-1m-M3P"/>
+                                                <constraint firstItem="XDT-ec-PTD" firstAttribute="leading" secondItem="0nx-g0-cfe" secondAttribute="trailing" constant="8" id="EtQ-jf-0w1"/>
+                                                <constraint firstItem="XDT-ec-PTD" firstAttribute="centerY" secondItem="D13-tL-1ul" secondAttribute="centerY" id="JXn-Ib-o1A"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="XDT-ec-PTD" secondAttribute="trailing" id="TqT-Uq-kFb"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="HRP-eM-RFY" secondAttribute="trailing" id="gNU-A8-nh9"/>
+                                                <constraint firstItem="HRP-eM-RFY" firstAttribute="leading" secondItem="0nx-g0-cfe" secondAttribute="trailing" constant="8" id="wfS-bb-XLG"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="jobLabel" destination="HRP-eM-RFY" id="yAx-iP-sFd"/>
+                                            <outlet property="nameLabel" destination="XDT-ec-PTD" id="cfK-UK-Czz"/>
+                                            <outlet property="profileImageView" destination="0nx-g0-cfe" id="VJF-zc-mRF"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Vjt-bg-tPc" id="rSU-NT-sOK"/>
+                                    <outlet property="delegate" destination="Vjt-bg-tPc" id="T1d-o0-UIc"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="0.97647058823529409" green="0.94901960784313721" blue="0.90588235294117647" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="EOh-cV-3zM" firstAttribute="leading" secondItem="xhN-wf-6yr" secondAttribute="trailing" id="5TT-zL-5Cb"/>
+                            <constraint firstItem="DNa-wN-Y7b" firstAttribute="width" secondItem="KK1-zC-rg5" secondAttribute="width" id="4o0-Bc-tf5"/>
+                            <constraint firstItem="DNa-wN-Y7b" firstAttribute="leading" secondItem="sON-ec-kjH" secondAttribute="trailing" id="Bwk-8p-qRs"/>
                             <constraint firstItem="sON-ec-kjH" firstAttribute="top" secondItem="3Bm-gA-q8Z" secondAttribute="topMargin" id="CiT-2Z-iG9"/>
                             <constraint firstItem="ibY-5X-GIN" firstAttribute="top" secondItem="KK1-zC-rg5" secondAttribute="bottom" id="PTV-VW-HV5"/>
+                            <constraint firstItem="DNa-wN-Y7b" firstAttribute="top" secondItem="xhN-wf-6yr" secondAttribute="bottom" id="RFv-gh-9tv"/>
                             <constraint firstItem="xhN-wf-6yr" firstAttribute="leading" secondItem="3Bm-gA-q8Z" secondAttribute="leadingMargin" constant="-20" id="UFt-Fp-Y6m"/>
                             <constraint firstItem="sON-ec-kjH" firstAttribute="leading" secondItem="3Bm-gA-q8Z" secondAttribute="leadingMargin" constant="-20" id="VxM-ry-Xk6"/>
                             <constraint firstItem="KK1-zC-rg5" firstAttribute="leading" secondItem="3Bm-gA-q8Z" secondAttribute="leadingMargin" constant="10" id="fG1-3m-DHO"/>
-                            <constraint firstItem="EOh-cV-3zM" firstAttribute="bottom" secondItem="KK1-zC-rg5" secondAttribute="top" id="iUo-Pz-Sao"/>
                             <constraint firstItem="xhN-wf-6yr" firstAttribute="top" secondItem="XID-jx-weE" secondAttribute="bottom" id="k6S-lB-jSH"/>
                             <constraint firstItem="KK1-zC-rg5" firstAttribute="top" secondItem="xhN-wf-6yr" secondAttribute="bottom" id="kkS-4S-zWy"/>
                             <constraint firstAttribute="trailingMargin" secondItem="xhN-wf-6yr" secondAttribute="trailing" constant="-20" id="o2W-06-cej"/>
                             <constraint firstAttribute="trailingMargin" secondItem="KK1-zC-rg5" secondAttribute="trailing" constant="10" id="p7b-qa-lNF"/>
                             <constraint firstAttribute="trailingMargin" secondItem="sON-ec-kjH" secondAttribute="trailing" constant="-20" id="r6J-tV-Ilb"/>
+                            <constraint firstItem="DNa-wN-Y7b" firstAttribute="height" secondItem="KK1-zC-rg5" secondAttribute="height" id="uaP-6a-UR3"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="baI-7F-LFB"/>
                     <connections>
-                        <outlet property="cancelButton" destination="EOh-cV-3zM" id="jJu-Jg-cO2"/>
+                        <outlet property="filteredTableView" destination="DNa-wN-Y7b" id="ekq-2I-fKO"/>
                         <outlet property="searchBar" destination="xhN-wf-6yr" id="2yU-kf-e7w"/>
                         <outlet property="searchTrailing" destination="o2W-06-cej" id="c1k-PQ-ocB"/>
                         <outlet property="tableView" destination="KK1-zC-rg5" id="4gL-ye-6vi"/>
